new flexbox should ignore float set on flexitems https://bugs.webkit.org/show_bug.cgi?id=70792

Reviewed by Ojan Vafai.

Source/WebCore:

Force flex items to not float.

Test: css3/flexbox/floated-flexitem.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::adjustRenderStyle): Force NoFloat on flex items.

LayoutTests:

Make an example in the spec into a ref test.  Add some styles to make it a bit more clear what's happening.

* css3/flexbox/floated-flexitem-expected.html: Added.
* css3/flexbox/floated-flexitem.html: Added.


Canonical link: https://commits.webkit.org/110485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124064 268f45cc-cd09-0410-ab3c-d52691b4dbfc